--- a/ui/css/src/modules/_templates.scss
+++ b/ui/css/src/modules/_templates.scss
@@ -77,7 +77,7 @@ $kimchi-icon-path: '../images';
     }
     .template-edit-wrapper-controls {
         vertical-align: top;
-        width: 400px;
+        width: 480px;
         height: 35px;
         line-height: 35px;
         margin: 7px 0 8px;
@@ -167,13 +167,13 @@ $kimchi-icon-path: '../images';
         width: 180px !important;
     }
     .template-storage-cell.type {
-        width: 100px;
+        width: 110px;
     }
     .template-storage-cell.disk {
-        width: 100px;
+        width: 133px;
     }
     .template-storage-cell.format {
-        width: 250px;
+        width: 162px;
     }
     .template-interface-cell.network {
         width: 220px;
@@ -319,6 +319,10 @@ $kimchi-icon-path: '../images';
 
 /* VM List View classes*/
 
+#templatestatusselect{
+      width: 240px !important;
+}
+
 #templates-root-container {
     .grid-control input[type="text"] {
         height: 38px;
@@ -390,6 +394,10 @@ $kimchi-icon-path: '../images';
                 border-bottom: none;
                 border-top: 0;
                 background-color: $table-bg;
+                width: 200px;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                white-space: nowrap;
             }
         }
         .wok-vm-body {
@@ -406,6 +414,7 @@ $kimchi-icon-path: '../images';
                 font-size: 12.5pt;
                 line-height: (1 + $line-height-base);
                 font-weight: 400;
+                width: 200px;
             }
             .column-type {
                 padding-left: 40px !important;
@@ -450,7 +459,7 @@ $kimchi-icon-path: '../images';
             width: 1.6900%;
         }
         .column-action {
-            width: 33.8000%;
+            width: 232px;
         }
         .item-hidden {
             display: none !important;
